# olivier

./: .gitignore  .typos.toml  Justfile  README.md  TODO  analysis_options.yaml  mise.toml  precious.toml  pubspec.yaml
integration_test/: catalog_ffi_test.dart  simple_test.dart  (+1 more)
rust/: Cargo.toml
rust/data/: README.md
rust/src/: cover.rs  db.rs  decision_log.rs  frb_generated.rs  lib.rs  settings.rs  tags.rs
rust/src/api/: activity.rs  catalog.rs  cover.rs  enrich.rs  mod.rs  playlists.rs  queue.rs  settings.rs  simple.rs  tags.rs
rust/src/catalog/: deletes.rs  ids.rs  mod.rs  playlists.rs  query.rs  roots.rs  scan.rs  schema.rs
rust/src/enrich/: client.rs  http.rs  mod.rs  model.rs  progress.rs  run.rs  select.rs  store.rs
rust/tests/: activity_log_test.rs  artist_reading_test.rs  catalog_test.rs  cover_test.rs  db_test.rs  enrich_resilience_test.rs  enrich_test.rs  playlists_test.rs  reading_classifier_test.rs  reading_per_track_test.rs  remove_entity_test.rs  scan_dedup_test.rs  scan_fail_test.rs  scan_new_files_test.rs  scan_remove_test.rs  search_test.rs  settings_test.rs  tags_test.rs  title_override_test.rs
rust/tests/fixtures/: sample-with-cover.flac  sample.alac.m4a  sample.flac  sample.m4a  sample.opus
rust/tests/fixtures/mb/: artist_9e414497_aliases.json  release_group_browse_guard.json  release_group_browse_muzai.json  release_group_browse_skip.json  release_group_browse_w_intl.json  release_guard_jpan.json  release_muzai.json  release_muzai_translate.json  release_muzai_translit.json  release_skip_jpan.json  release_w_jpan.json
(+228 files in other folders)
