[package]
name = "rust_lib_olivier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
lofty = "0.24"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
