[package]
name = "rust_lib_olivier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
anyhow = "1"
lofty = "0.24"
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2.6"
ignore = "0.4.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
async-trait = "0.1"
jiff = "0.2.28"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
